Attempt at fixing overflow

--- a/indexS.css
+++ b/indexS.css
@@ -1,6 +1,7 @@
 * {
         margin: 0;
         overflow-x: hidden;
+        overflow-y: hidden;
     }
 nav > ul > li{
   display: inline;
